--- a/MyDiaryCalendar/Resources/Storyboards/Content.storyboard
+++ b/MyDiaryCalendar/Resources/Storyboards/Content.storyboard
@@ -1,28 +1,92 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17150" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17122"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Add View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="addVC" id="Y6W-OH-hqX" customClass="AddViewController" customModule="MyDiaryCalendar" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="opU-QR-3Ig">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <items>
+                                    <navigationItem title="일기 작성" id="Cx3-Wg-Lwb">
+                                        <barButtonItem key="leftBarButtonItem" title="Item" image="xmark" catalog="system" id="P6u-Es-ZNh"/>
+                                        <barButtonItem key="rightBarButtonItem" title="저장" id="t7h-np-XrY"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="folder" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Ctc-8J-4Hw">
+                                <rect key="frame" x="0.0" y="89" width="414" height="411.5"/>
+                                <color key="backgroundColor" red="0.90755695188123675" green="1" blue="0.90731922611283855" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" red="0.23971675350685037" green="0.3333333432674408" blue="0.23499004687613972" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Ctc-8J-4Hw" secondAttribute="height" multiplier="1:1" id="lyr-hX-ml5"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="제목을 입력해주세요" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="crX-8a-qQf">
+                                <rect key="frame" x="20" y="546" width="374" height="50"/>
+                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" text="일기 내용" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zup-Nd-LCD">
+                                <rect key="frame" x="20" y="716" width="374" height="128"/>
+                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wwA-7H-LTH">
+                                <rect key="frame" x="20" y="643" width="374" height="50"/>
+                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="날짜 피커"/>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Ctc-8J-4Hw" firstAttribute="top" secondItem="opU-QR-3Ig" secondAttribute="bottom" id="2Rl-ra-UAA"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="opU-QR-3Ig" secondAttribute="trailing" id="2a3-mO-80q"/>
+                            <constraint firstItem="wwA-7H-LTH" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="87B-0U-krO"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Ctc-8J-4Hw" secondAttribute="trailing" id="8jg-hz-inf"/>
+                            <constraint firstItem="wwA-7H-LTH" firstAttribute="height" secondItem="crX-8a-qQf" secondAttribute="height" id="Lvb-4O-sGQ"/>
+                            <constraint firstItem="crX-8a-qQf" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="Ofa-M6-pTF"/>
+                            <constraint firstItem="zup-Nd-LCD" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="Udy-C7-laU"/>
+                            <constraint firstItem="Ctc-8J-4Hw" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="UzY-cf-e9b"/>
+                            <constraint firstItem="opU-QR-3Ig" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="cQn-2G-YWr"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="wwA-7H-LTH" secondAttribute="trailing" constant="20" id="ljs-73-Sa2"/>
+                            <constraint firstItem="opU-QR-3Ig" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="mw6-22-qZZ"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zup-Nd-LCD" secondAttribute="trailing" constant="20" id="tQY-6h-1f2"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="crX-8a-qQf" secondAttribute="trailing" constant="20" id="z8F-zm-0Ao"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="133" y="119"/>
         </scene>
     </scenes>
     <resources>
+        <image name="folder" catalog="system" width="128" height="97"/>
+        <image name="xmark" catalog="system" width="128" height="113"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
