--- a/MyDiaryCalendar/Resources/Storyboards/MyDiaryCalendar/Resources/Storyboards/Base.lproj/Search.storyboard
+++ b/MyDiaryCalendar/Resources/Storyboards/MyDiaryCalendar/Resources/Storyboards/Base.lproj/Search.storyboard
@@ -16,22 +16,84 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hdk-st-CGs">
-                                <rect key="frame" x="180" y="438" width="54" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Ff8-k1-JzL">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="searchCell" rowHeight="120" id="iHa-jy-s3e" customClass="SearchTableViewCell" customModule="MyDiaryCalendar" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="iHa-jy-s3e" id="qRj-jR-fjy">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4Q0-QB-k8b">
+                                                    <rect key="frame" x="10" y="10" width="284" height="100"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zev-al-w99">
+                                                            <rect key="frame" x="0.0" y="0.0" width="284" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2021/01/01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gc8-x6-nVb">
+                                                            <rect key="frame" x="0.0" y="28.5" width="284" height="16"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kEY-2x-7qD">
+                                                            <rect key="frame" x="0.0" y="52.5" width="284" height="47.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oAm-RT-5Ee">
+                                                    <rect key="frame" x="304" y="10" width="100" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="oAm-RT-5Ee" secondAttribute="height" multiplier="1:1" id="zpt-M6-QPC"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="4Q0-QB-k8b" firstAttribute="top" secondItem="qRj-jR-fjy" secondAttribute="top" constant="10" id="CiQ-BE-wJd"/>
+                                                <constraint firstItem="oAm-RT-5Ee" firstAttribute="top" secondItem="qRj-jR-fjy" secondAttribute="top" constant="10" id="PGs-h3-kpK"/>
+                                                <constraint firstAttribute="bottom" secondItem="oAm-RT-5Ee" secondAttribute="bottom" constant="10" id="Txx-0T-ykt"/>
+                                                <constraint firstItem="4Q0-QB-k8b" firstAttribute="leading" secondItem="qRj-jR-fjy" secondAttribute="leading" constant="10" id="Z8Y-x4-cgQ"/>
+                                                <constraint firstAttribute="trailing" secondItem="oAm-RT-5Ee" secondAttribute="trailing" constant="10" id="ZFt-Gy-nj6"/>
+                                                <constraint firstAttribute="bottom" secondItem="4Q0-QB-k8b" secondAttribute="bottom" constant="10" id="rot-Zf-R5r"/>
+                                                <constraint firstItem="oAm-RT-5Ee" firstAttribute="leading" secondItem="4Q0-QB-k8b" secondAttribute="trailing" constant="10" id="thx-aU-5OJ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="contentLabel" destination="kEY-2x-7qD" id="qDj-wm-baD"/>
+                                            <outlet property="dateLabel" destination="Gc8-x6-nVb" id="gRV-mE-kKQ"/>
+                                            <outlet property="dirayImageView" destination="oAm-RT-5Ee" id="mGT-tn-AZL"/>
+                                            <outlet property="titleLabel" destination="Zev-al-w99" id="mUh-uK-zQu"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="a4U-j2-grC"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="a4U-j2-grC" firstAttribute="bottom" secondItem="Ff8-k1-JzL" secondAttribute="bottom" id="RVG-4r-mFH"/>
+                            <constraint firstItem="a4U-j2-grC" firstAttribute="trailing" secondItem="Ff8-k1-JzL" secondAttribute="trailing" id="c3L-xe-6nf"/>
+                            <constraint firstItem="Ff8-k1-JzL" firstAttribute="leading" secondItem="a4U-j2-grC" secondAttribute="leading" id="whO-iZ-7Q7"/>
+                            <constraint firstItem="Ff8-k1-JzL" firstAttribute="top" secondItem="a4U-j2-grC" secondAttribute="top" id="yTj-cI-pMr"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="검색" image="magnifyingglass" catalog="system" id="HMg-HB-cjm"/>
+                    <connections>
+                        <outlet property="tableView" destination="Ff8-k1-JzL" id="8WD-QG-7Tx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wyO-F3-udK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1032" y="206"/>
+            <point key="canvasLocation" x="1031.8840579710145" y="205.58035714285714"/>
         </scene>
     </scenes>
     <resources>
