--- a/MyDiaryCalendar/Resources/Storyboards/Setting.storyboard
+++ b/MyDiaryCalendar/Resources/Storyboards/Setting.storyboard
@@ -23,6 +23,15 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ox-sv-1JS">
+                                <rect key="frame" x="171" y="333" width="73" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="백업하기"/>
+                                <connections>
+                                    <action selector="onBackUp:" destination="h1t-70-eFt" eventType="touchUpInside" id="j9p-IR-Dk0"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="487-Ti-lkv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
